--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,9 @@
+- title: "Rooms on a Sphere"
+  location: UW Madison AMS Student Chapter Seminar
+  city: Madison, WI
+  url: https://hilbert.math.wisc.edu/wiki/index.php/AMS_Student_Chapter_Seminar
+  abstract: A classic combinatorial lemma becomes very simple to state and prove when on the surface of a sphere, leading to easy constructive proofs of other well known theorems.
+  date: 2021-09-29
 - title: "Algebraic Geometry Beer Label"
   location: Delta Beer Lab
   city: Madison, WI
