change order, description of GAGS

--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,3 +1,9 @@
+- title: Organizer
+  at: UW Madison Graduate Algebraic Geometry Seminar
+  url: "https://hilbert.math.wisc.edu/wiki/index.php/Graduate_Algebraic_Geometry_Seminar"
+  location: Madison, WI
+  years: Fall 2021-
+  description: "The purpose of this seminar is to learn algebraic geometry and commutative algebra by giving and listening to talks in a informal setting."
 - title: Public Service Fellow
   at: University of Wisconsin-Madison
   url: https://wiscience.wisc.edu/program/public-service-fellows
@@ -22,12 +28,6 @@
   location: Madison, WI
   years: Fall 2019-
   description: "The DRP is a math mentoring program that pairs undergraduate students with graduate student mentors, for a semester-long independent study project. The goal of this program is to get students excited about mathematics by giving them an out-of-the-classroom experience, usually in topics that are outside of their coursework."
-- title: Organizer
-  at: UW Madison Graduate Algebraic Geometry Seminar
-  url: "https://hilbert.math.wisc.edu/wiki/index.php/Graduate_Algebraic_Geometry_Seminar"
-  location: Madison, WI
-  years: Fall 2021-
-  description: "The purpose of this seminar is to learn algebraic geometry and commutative algebra by giving and listening to talks in a informal setting. Talks are typically accessible to beginning graduate students and take many different forms. Regardless the goal of GAGS is to provide a supportive and inclusive place for all to learn more about algebraic geometry and commutative algebra."
 - title: Volunteer
   at: AMS Fall Central Sectional
   years: Sep 2019
