--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,5 +1,11 @@
+- title: Géometrie Algébrique en l'honneur de Claire Voisin
+  venue: Institut Henri Poincare
+  where: Paris, France
+  start: 2022-05-16
+  end: 2022-05-20
 - title: CA+ Conference
-  where: University of Minnesota
+  venue: University of Minnesota
+  where: Minneapolis, MN
   start: 2021-10-30
   end: 2021-10-30
 - title: AMS Fall Central Sectional Meeting
