--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -54,6 +54,7 @@
 - title: "MATH 221: Calculus and Analytic Geometry I"
   panel: true
   highlight: 1
+  sections: 341, 344
   professor: Alex Waldron
   type: Current
   role: Teaching Assistant
