--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,3 +1,8 @@
+- title: 2022 DoD National NDSEG Fellows Conference
+  venue: Sheraton Hotel
+  where: Boston, MA
+  start: 2022-07-24
+  end: 2022-07-28
 - title: Géometrie Algébrique en l'honneur de Claire Voisin
   venue: Institut Henri Poincare
   where: Paris, France
