--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -46,7 +46,7 @@
   arxiv: "2111.13773"
   highlight: true
   tags:
-    - Virtual Complexes
+    - Virtual Resolutions
     - Toric Varieties
   type:
     - Preprint
