--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,5 +1,9 @@
-- title: 2022 DoD National NDSEG Fellows Conference
-  venue: Sheraton Hotel
+- title: Tropical Geometry MSRI Workshop
+  venue: St Mary's College
+  where: Moraga, California
+  start: 2022-08-01
+  end: 2022-08-12
+- title: NDSEG Fellows Conference
   where: Boston, MA
   start: 2022-07-24
   end: 2022-07-28
