--- a/_data/service.yml
+++ b/_data/service.yml
@@ -2,19 +2,19 @@
   at: UW Madison Graduate Algebraic Geometry Seminar
   url: "https://hilbert.math.wisc.edu/wiki/index.php/Graduate_Algebraic_Geometry_Seminar"
   location: Madison, WI
-  years: Fall 2021-
+  years: Fall 2021 -
   description: "The purpose of this seminar is to learn algebraic geometry and commutative algebra by giving and listening to talks in a informal setting."
 - title: Public Service Fellow
   at: University of Wisconsin-Madison
   url: https://wiscience.wisc.edu/program/public-service-fellows
   location: Madison, WI
-  years: Jan 2021 - Jan 2022
+  years: Jan 2021-Jan 2022
   description: The 2021 cohort had 3 people in the social entrepreneurship pathway. Over the course of a year, fellows engage in a practicum working directly with a community partner on a chosen project focused on issues of public concern.
 - title: Mentor
   at:  First Generation Student Success
   url: https://firstgensuwmadison.wixsite.com/fgss
   location: Madison, WI
-  years: Fall 2020-
+  years: Fall 2020-Spring 2021
   description: "FGSS is a student organization dedicated to helping students locate resources, connect with peers and faculty, and support them along their college journey. FGSS links first-generation college students to first generation graduate and faculty mentors for monthly meetings. "
 - title: Geometry of Schemes Reading Group
   at: UW Madison
