--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -1,3 +1,7 @@
+- name: Early-career AMS-NSF-Simons-ICM Travel Grant
+  years: 2022
+  sponsor: NSF, Simons Foundation
+  description: Awarded to fund participation in the International Congress of Mathematicians in Saint Petersburg, Russia, in July of 2022. Covers round-trip travel, Congress registration, accommodations, meals, cultural activities, and some ground transportation at the Congress site up to ~$3,500.
 - name: AMS Graduate Student Travel Grant
   years: 2020
   sponsor: University of Wisconsin-Madison
