Add Mega Math Meet

--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,3 +1,9 @@
+- title: Co-coordinator
+  at: UW Madison
+  url: "https://math.wisc.edu/mega-math-meet/"
+  location: Madison, WI
+  years: Spring 2022
+  description: "Mega math meet is a math competition for over 200 middle schoolers around Wisconsin. I helped coordinate the final stage at UW Madison by writing problems, sending emails, and overseeing the process."
 - title: Organizer
   at: UW Madison Graduate Algebraic Geometry Seminar
   url: "https://hilbert.math.wisc.edu/wiki/index.php/Graduate_Algebraic_Geometry_Seminar"
