--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,6 +3,7 @@
   degree: Ph.D. in Mathematics
   location: Madison, WI
   description: 
+  - "Advised by Daniel Erman and Michael Kemeny."
 - university: Honors College of Charleston
   years: 2015-2019
   degree: B.S. Mathematics | B.A. Chemistry | Minor Data Science
