Update megamath meet position

--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,4 +1,4 @@
-- title: Co-coordinator
+- title: Math Meet Coordinator
   at: UW Madison
   url: "https://math.wisc.edu/mega-math-meet/"
   location: Madison, WI
