--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -18,6 +18,11 @@
   start: 2022-05-16
   end: 2022-05-20
 - title: CA+ Conference
+  venue: Iowa State University
+  where: Ames, Iowa
+  start: 2022-04-30
+  end: 2021-05-01
+- title: CA+ Conference
   venue: University of Minnesota
   where: Minneapolis, MN
   start: 2021-10-30
