Removing unnecessary entries in cv

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,9 @@
 - university: University of Wisconsin-Madison
   years: 2019-
-  degree: Ph.D. in Mathematics
+  degree: Ph.D. in Mathematics, Minor in Computer Science
   location: Madison, WI
   description: 
-  - "Advised by Daniel Erman and Michael Kemeny."
+  - "Studying algebraic geometry, advised by Daniel Erman and Michael Kemeny."
 - university: Honors College of Charleston
   years: 2015-2019
   degree: B.S. Mathematics | B.A. Chemistry | Minor Data Science
