--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,8 @@
+- title: "Chip Firing on Graphs"
+  location: Madison Math Circle
+  city: Madison, WI
+  date: 2021-04-18
+  url: https://hilbert.math.wisc.edu/wiki/index.php/Madison_Math_Circle
 - title: "Syzygies and Koszul Cohomology"
   location: UW Madison Graduate Algebraic Geometry Seminar
   city: Madison, WI
