--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -9,7 +9,7 @@
   years: 2019
   sponsor: Air Force Office of Scientific Research
   sponsor_url: https://www.ndsegfellowships.org/2019-awardees
-  description: The National Defense Science and Engineering Graduate (NDSEG) Fellowship is a highly competitive, portable fellowship that is awarded to ~120 doctoral students annually worth. The NDSEG Fellowship lasts for 3 years and pays for full tuition and all mandatory fees; a monthly stipend ($38,400 annually); a $5,000 travel budget over the Fellow’s tenure for professional development; and up to $1,200 a year in health insurance. I was selected for my proposal about using recent results in spectral graph theory to estimate how much confidence we should have in ranking algorithms.
+  description: The National Defense Science and Engineering Graduate (NDSEG) Fellowship is a highly competitive, portable fellowship that is awarded to ~120 doctoral students annually. The NDSEG Fellowship lasts for 3 years and pays for full tuition and all mandatory fees; a monthly stipend ($38,400 annually); a $5,000 travel budget over the Fellow’s tenure for professional development; and up to $1,200 a year in health insurance. I was selected for my proposal about using recent results in spectral graph theory to estimate how much confidence we should have in ranking algorithms.
 - name: Phi Kappa Phi Fellowship
   years: 2019
   sponsor: Phi Kappa Phi
