--- a/_data/positions.yml
+++ b/_data/positions.yml
@@ -6,7 +6,7 @@
   mentors:
     - Alex Kasman
   description: "Conduct research of noncommutative soliton solutions to the nonabelian n-KdV hierarchy and KP hierarchy focusing on quaternion-valued solutions to the KdV equation."
-- title: Summer Data Analyst
+- title: Data Science Intern
   years: Jul 2017-Aug 2017
   company: Tresata
   location: Charlotte, NC
