--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -17,6 +17,11 @@
   where: Paris, France
   start: 2022-05-16
   end: 2022-05-20
+- title: Western Algebraic Geometry Symposium
+  venue: Colorado State University
+  where: Fort Collins, CO
+  start: 2022-04-22
+  end: 2022-04-24
 - title: CA+ Conference
   venue: Iowa State University
   where: Ames, Iowa
