--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,3 +1,13 @@
+- title: GAeL XXX
+  venue: University of Warwick
+  where: Coventry, UK
+  start: 2023-07-03
+  end: 2023-07-07
+- title: AMS Fall Western Sectional Meeting
+  venue: University of Utah
+  where: Salt Lake City, Utah
+  start: 2022-10-22
+  end: 2022-10-23
 - title: NDSEG Fellows Conference
   where: Boston, MA
   start: 2022-07-24
