--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -3,7 +3,7 @@
   highlight: 1
   url: "https://sites.google.com/view/gaelxxix/home"
   image: gaelgroupphoto.jpeg
-  description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers. Recently,  GAeL has been held in Trieste (Italy), Leuven (Belgium), Nesin Maths Village (Turkey), Bath (UK), Strasbourg (France), Bucharest (Romania) and Loughborough (UK).
+  description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers. 
 - title: Positivity in Algebraic Geometry
   type: Reading Group
   url: "/organization/positivity"
