--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -8,6 +8,11 @@
   where: Salt Lake City, Utah
   start: 2022-10-22
   end: 2022-10-23
+- title: MAGGC 2022
+  venue: University of Illinois at Chicago
+  where: Chicago, IL
+  start: 2022-08-10
+  end: 2022-08-11
 - title: NDSEG Fellows Conference
   where: Boston, MA
   start: 2022-07-24
