hidden service activity

--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,3 +1,9 @@
+- title: Graduate Mentor
+  at: UW Madison
+  location: Madison, WI
+  years: Fall 2023
+  description: Helped orient new PhD students into the PhD program at UW Madison.
+  hide: true
 - title: Organizer
   at: GAeL XXX
   location: Coventry, UK
