--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,7 +1,13 @@
 - title: Graduate Mentor
+  at: MXM Experimental Mathematics project
+  location: Madison, WI
+  years: Fall 2022
+  description: Help direct undergraduates on a  project on identifiable linear compartmental models.
+  hide: true
+- title: Graduate Mentor
   at: UW Madison
   location: Madison, WI
-  years: Fall 2023
+  years: Fall 2022
   description: Helped orient new PhD students into the PhD program at UW Madison.
   hide: true
 - title: Organizer
