--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -1,36 +1,9 @@
-- title: "MATH 229: Vector Calculus with Chemical Applications"
-  panel: true
-  image: 6-armyresearch.jpg
-  type: Past
-  role: Teaching Assistant
-  year: Spring 2019
-  location: College of Charleston
-  roledescription: Presented new content and held problem sessions.
-  description: This course is aimed at students preparing for a course in physical chemistry. It combines topics from Calculus I-III, linear algebra, and group theory to explain things like symmetries in molecules and crystal structures.
-- title: "MATH 229: Vector Calculus with Chemical Applications"
-  panel: true
-  image: 6-armyresearch.jpg
-  type: Past
-  role: Teaching Assistant
-  year: Fall 2018
-  location: College of Charleston
-  roledescription: Presented new content and held problem sessions.
-- title: "MATH 229: Vector Calculus with Chemical Applications"
-  panel: true
-  image: 6-armyresearch.jpg
-  type: Past
-  role: Teaching Assistant
-  year: Spring 2018
-  location: College of Charleston
-  roledescription: Presented new content and held problem sessions.
-- title: "MATH 229: Vector Calculus with Chemical Applications"
-  panel: true
-  image: 6-armyresearch.jpg
-  type: Past
-  role: Teaching Assistant
-  year: Fall 2017
-  location: College of Charleston
-  roledescription: Presented new content and held problem sessions.
+- title: "Galin Education"
+  role: "Academic Tutor"
+  type: Current
+  year: Aug 2022 - Current
+  location: Madison, WI
+  roledescription: Meet with students weekly one on one to help with college level math courses.
 - title: "MATH 221: Calculus and Analytic Geometry I"
   panel: false
   professor: Gabriele Meyer 
@@ -54,19 +27,48 @@
   url: "/teaching/221Fall2021"
   image: calculus1.jpg
   description: This page organizes calculus discussion sections running in Fall 2021.
-  roledescription: Hold weekly problem solving sessions.
+  roledescription: Hold weekly problem solving sessions and office hours.
+- title: "MATH 229: Vector Calculus with Chemical Applications"
+  panel: true
+  image: 6-armyresearch.jpg
+  type: Past
+  role: Teaching Assistant
+  year: Fall 2017
+  location: College of Charleston
+  roledescription: Presented new content and held problem sessions.
+- title: "MATH 229: Vector Calculus with Chemical Applications"
+  panel: true
+  image: 6-armyresearch.jpg
+  type: Past
+  role: Teaching Assistant
+  year: Spring 2018
+  location: College of Charleston
+  roledescription: Presented new content and held problem sessions.
+- title: "MATH 229: Vector Calculus with Chemical Applications"
+  panel: true
+  image: 6-armyresearch.jpg
+  type: Past
+  role: Teaching Assistant
+  year: Fall 2018
+  location: College of Charleston
+  roledescription: Presented new content and held problem sessions.
+- title: "MATH 229: Vector Calculus with Chemical Applications"
+  panel: true
+  image: 6-armyresearch.jpg
+  type: Past
+  role: Teaching Assistant
+  year: Spring 2019
+  location: College of Charleston
+  roledescription: Presented new content and held problem sessions.
+  description: This course is aimed at students preparing for a course in physical chemistry. It combines topics from Calculus I-III, linear algebra, and group theory to explain things like symmetries in molecules and crystal structures.
 - title: "MATH 221: Calculus and Analytic Geometry I"
   panel: true
   type: Current
+  role: Teaching Assistant
   professor: Nathan Fisher
   year: Fall 2022
   location: University of Wisconsin-Madison
   url: "/teaching/221Fall2022"
   image: calculus1.jpg
   description: This page organizes calculus discussion sections 305 and 306 running in Fall 2022.
-- title: "Galin Education"
-  role: "Academic Tutor"
-  type: Current
-  year: Aug 2022 - Current
-  location: Madison, WI
-  roledescription: Meet with students weekly one on one to help with college level math courses.
+  roledescription: Hold weekly problem solving sessions and office hours.
