Fixed author listing

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -39,7 +39,8 @@
 - id: MultiregularityOfCurves
   title: "Regularity of Curves for Products of Projective Spaces"
   year: 2022
-  authors: John Cobb
+  authors: 
+    - John Cobb
   venue: In progress
   description: The regularity of a projective variety tells you how algebraically complicated its syzygies are. I generalize an important theorem about the regularity of curves when they are embedded in products of projective spaces.
   type: 
