Make MXM sound better

--- a/_data/service.yml
+++ b/_data/service.yml
@@ -2,7 +2,7 @@
   at: MXM Experimental Mathematics project
   location: Madison, WI
   years: Fall 2022
-  description: Help direct undergraduates on a  project on identifiable linear compartmental models.
+  description: Directed advanced undergraduates on a computationally focused research project concerning identifiable linear compartmental models. These models have applications in chemical reaction networks, epidemiology, and pharmacokinetics.
   hide: true
 - title: Graduate Mentor
   at: UW Madison
