--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,4 +1,9 @@
 - title: Graduate Mentor
+  at: Undergraduate Mentoring Program
+  location: Madison, WI
+  years: Fall 2022
+  description: Met with a group of undergraduate math majors to give advice about how to navigate their undergrad degree, plan for grad school apps, and think about REUs and other opportunities.
+- title: Graduate Mentor
   at: MXM Experimental Mathematics project
   location: Madison, WI
   years: Fall 2022
