WAGS UC riverside

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -3,6 +3,11 @@
   where: Coventry, UK
   start: 2023-07-03
   end: 2023-07-07
+- title: Western Algebraic Geometry Symposium
+  venue: University of California, Riverside
+  where: Riverside, CA
+  start: 2022-11-05
+  end: 2022-11-06
 - title: AMS Fall Western Sectional Meeting
   venue: University of Utah
   where: Salt Lake City, Utah
