--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -3,6 +3,11 @@
   where: Coventry, UK
   start: 2023-07-03
   end: 2023-07-07
+- title: Birational Complexity of Algebraic Varieties
+  venue: Simons Center for Geometry and Physics
+  where: Stony Brook, NY
+  start: 2022-12-05
+  end: 2022-12-09
 - title: Western Algebraic Geometry Symposium
   venue: University of California, Riverside
   where: Riverside, CA
