syzygies and reg conference

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -3,6 +3,11 @@
   where: Coventry, UK
   start: 2023-07-03
   end: 2023-07-07
+- title: Syzygies and Regularity
+  venue: University of Illinois at Chicago
+  where: Chicago, IL
+  start: 2023-04-14
+  end: 2023-04-16
 - title: Birational Complexity of Algebraic Varieties
   venue: Simons Center for Geometry and Physics
   where: Stony Brook, NY
