update GaEL website

--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -1,7 +1,7 @@
 - title: GAeL XXX
   type: Conference
   highlight: 1
-  url: "https://sites.google.com/view/gaelxxix/home"
+  url: "https://sites.google.com/view/gaelxxx/home"
   image: gaelgroupphoto.jpeg
   description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers. 
 - title: Positivity in Algebraic Geometry
