--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -23,6 +23,10 @@
   where: Salt Lake City, Utah
   start: 2022-10-22
   end: 2022-10-23
+- title: Center for Computing Sciences
+  where: Bowie, MD
+  start: 2022-10-19
+  end: 2022-10-19
 - title: MAGGC 2022
   venue: University of Illinois at Chicago
   where: Chicago, IL
