Update DRP website

--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -18,7 +18,7 @@
   description: "Geometry of Schemes is a textbook by David Eisenbud and Joe Harris. This page organizes the Summer 2020 reading schedule."
 - title: Directed Reading Program
   type: Service
-  url: "https://www.math.wisc.edu/~drp/"
+  url: "https://wiki.math.wisc.edu/index.php/Directed_Reading_Program"
   image: drp.jpg
   description: "The DRP is a math mentoring program that pairs undergraduate students with graduate student mentors, for a semester-long independent study project."
   highlight: 2
